--- a/ETF/clean.ipynb
+++ b/ETF/clean.ipynb
@@ -517,186 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#change the column:Country/Region to Country\n",
-    "#Date,Country,Confirmed,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th>Continent</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>TotalCases</th>\n",
-       "      <th>NewCases</th>\n",
-       "      <th>TotalDeaths</th>\n",
-       "      <th>NewDeaths</th>\n",
-       "      <th>TotalRecovered</th>\n",
-       "      <th>NewRecovered</th>\n",
-       "      <th>ActiveCases</th>\n",
-       "      <th>Serious,Critical</th>\n",
-       "      <th>Tot Cases/1M pop</th>\n",
-       "      <th>Deaths/1M pop</th>\n",
-       "      <th>TotalTests</th>\n",
-       "      <th>Tests/1M pop</th>\n",
-       "      <th>WHO Region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Iceland</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>341465.0</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1825.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5652.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>149693.0</td>\n",
-       "      <td>438385.0</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Guinea-Bissau</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>1972277.0</td>\n",
-       "      <td>2032</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>944.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1061.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1030.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1500.0</td>\n",
-       "      <td>761.0</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>11594739.0</td>\n",
-       "      <td>71158</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9859.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17661.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43638.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>6137.0</td>\n",
-       "      <td>850.0</td>\n",
-       "      <td>1767120.0</td>\n",
-       "      <td>152407.0</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Kazakhstan</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>18798667.0</td>\n",
-       "      <td>95942</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1058.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68871.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>26013.0</td>\n",
-       "      <td>221.0</td>\n",
-       "      <td>5104.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>2163713.0</td>\n",
-       "      <td>115099.0</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Mozambique</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>31333962.0</td>\n",
-       "      <td>2120</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>795.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1310.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>65151.0</td>\n",
-       "      <td>2079.0</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Country/Region Continent  Population  TotalCases  NewCases  TotalDeaths  \\\n",
-       "129        Iceland    Europe    341465.0        1930       NaN         10.0   \n",
-       "127  Guinea-Bissau    Africa   1972277.0        2032       NaN         27.0   \n",
-       "35         Belgium    Europe  11594739.0       71158       NaN       9859.0   \n",
-       "25      Kazakhstan      Asia  18798667.0       95942       NaN       1058.0   \n",
-       "124     Mozambique    Africa  31333962.0        2120       NaN         15.0   \n",
-       "\n",
-       "     NewDeaths  TotalRecovered  NewRecovered  ActiveCases  Serious,Critical  \\\n",
-       "129        NaN          1825.0           NaN         95.0               NaN   \n",
-       "127        NaN           944.0           NaN       1061.0               5.0   \n",
-       "35         NaN         17661.0           NaN      43638.0              61.0   \n",
-       "25         NaN         68871.0           NaN      26013.0             221.0   \n",
-       "124        NaN           795.0           NaN       1310.0               NaN   \n",
-       "\n",
-       "     Tot Cases/1M pop  Deaths/1M pop  TotalTests  Tests/1M pop WHO Region  \n",
-       "129            5652.0           29.0    149693.0      438385.0     Europe  \n",
-       "127            1030.0           14.0      1500.0         761.0     Africa  \n",
-       "35             6137.0          850.0   1767120.0      152407.0     Europe  \n",
-       "25             5104.0           56.0   2163713.0      115099.0     Europe  \n",
-       "124              68.0            0.5     65151.0        2079.0     Africa  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "csv_file = \"../Resources/worldometer_data.csv\"\n",
-    "worldometer_df = pd.read_csv(csv_file)\n",
-    "worldometer_df.sample(5)"
+    "#change the column:Country/Region to Country\n"
    ]
   },
   {
@@ -704,7 +525,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Date,Country,Confirmed,(WHO Region)"
+   ]
   }
  ],
  "metadata": {
